--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vuepress-theme-easy-book",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "main": "index.js",
   "author": "open17",
   "license": "MIT",
-  "description": "A flat theme for Vuepress site ",
+  "description": "一个明亮/黑暗风格的vuepress 1.x 主题",
   "scripts": {
     "dev": "vuepress dev example",
     "build": "vuepress build example"
