Feat: Test git hook

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,14 +17,14 @@ jobs:
         with:
           node-version: 16.19.0
 
-      - name: Install yarn
-        run: npm install -g yarn@1.22.19
+      # - name: Install yarn
+      #   run: npm install -g yarn@1.22.19
 
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
+      # - name: Install dependencies
+      #   run: yarn install --frozen-lockfile
 
-      - name: Build
-        run: yarn build
+      # - name: Build
+      #   run: yarn build
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
