--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-theme-easy-book",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "main": "index.js",
   "author": "open17",
   "license": "GPL-3.0",
@@ -24,6 +24,7 @@
   "keywords": [
     "vuepress",
     "vuepress-theme",
-    "theme"
+    "theme",
+    "vuepress-theme-easy-book"
   ]
 }
