--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build": "vuepress build example"
   },
   "dependencies": {
+    "autoprefixer": "9",
     "element-ui": "2.15.13",
+    "postcss": "7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vuepress-plugin-el-img": "^1.0.0",
     "vuepress-plugin-el-tab": "^1.0.1",
     "vuepress-plugin-fulltext-search": "^2.2.1",
